--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
-    <title>Automotive Landing Page</title>
+    <title>Auto Landing Page</title>
     <link rel="icon" href="favicon.ico">
   </head>
   <body>
     <section class="showcase">
       <header>
-        <h2 class="logo">Automotive</h2>
+        <h2 class="logo">Auto</h2>
         <div class="toggle"></div>
       </header>
       <video src="sea.mp4" muted loop autoplay></video>
